# qlik-test-yuri

./: README.md  main.py  pyproject.toml
qlik_test_yuri/: __init__.py
